# tf-image-interpreter

./: .gitignore  README.md  install-tf-mac-cpu.sh  requirements-to-freeze.txt  setup.cfg
data/: VOCdevkit
datasets/: meta.py  roidb.py
image_interpreter/: config.py  minibatch.py  train.py
image_interpreter/layers/: common.py  feature.py  proposal.py  region_proposal.py  roi_pooling.py  rpn_data.py
image_interpreter/layers/test/: test_rpn.py
image_interpreter/test/: test_feature.py  test_minibatch.py
