[metadata]
name = image_interpreter
author = ThoughtWorks China Data Team
author-email = dtong@thoughtworks.com
summary = ThoughtWorks image understanding tools
description-file = README.md
home-page = https://github.com/ThoughtWorksInc/tf-image-interpreter
license = MIT
classifier =
    Programming Language :: Python
keywords =
    tensorflow
[files]
packages =
    image_interpreter